--- a/index.html
+++ b/index.html
@@ -1,5 +1,13 @@
 <html>
+
 <body>
-  <script src="./index.js"></script>
+    <header class="header">
+        <div class="header__nav--mobile">
+            <div class="nav__logo"></div>
+            <div class="nav__menu"></div>
+        </div>
+    </header>
+    <script src="./index.js"></script>
 </body>
+
 </html>
