--- a/index.html
+++ b/index.html
@@ -1,10 +1,36 @@
 <html>
 
+<head>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
+</head>
+
 <body>
     <header class="header">
         <div class="header__nav--mobile">
             <div class="nav__logo"></div>
-            <div class="nav__menu"></div>
+            <input id="dropdown" class="input-box" type="checkbox" style="display:none;">
+            <label for="dropdown" class="dropdown">
+                <span class="hamburger">
+                    <span class="icon-bar top-bar"></span>
+                    <span class="icon-bar middle-bar"></span>
+                    <span class="icon-bar bottom-bar"></span>
+                </span>
+            </label>
+            <div class="nav__menu_collapse">
+                <ul class="nav__menu_collapse__items">
+                    <li>About</li>
+                    <li>Careers</li>
+                    <li>Events</li>
+                    <li>Products</li>
+                    <li>Support</li>
+                </ul>
+            </div>
+            <div class="nav__menu__content">
+                <h3>
+                    Immersive experiences that deliver
+                </h3>
+            </div>
         </div>
     </header>
     <script src="./index.js"></script>
