--- a/index.html
+++ b/index.html
@@ -1,49 +1,194 @@
-<html>
+<!DOCTYPE html>
+<html lang="en">
+  <head>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Loopstudios</title>
+    <link
+      rel="shortcut icon"
+      href="./images/favicon-32x32.png"
+      type="image/x-icon"
+    />
+  </head>
 
-<head>
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-
-</head>
-
-<body>
+  <body>
     <header class="header full-width">
-        <div class="content">
-            <div class="nav__logo"></div>
-            <input id="dropdown" class="input-box" type="checkbox" style="display:none;">
-            <label for="dropdown" class="dropdown">
-                <span class="hamburger">
-                    <span class="icon-bar top-bar"></span>
-                    <span class="icon-bar middle-bar"></span>
-                    <span class="icon-bar bottom-bar"></span>
-                </span>
-            </label>
-            <div class="nav__menu_collapse">
-                <ul class="nav__menu_collapse__items">
-                    <li>About</li>
-                    <li>Careers</li>
-                    <li>Events</li>
-                    <li>Products</li>
-                    <li>Support</li>
-                </ul>
-            </div>
-            <div class="nav__menu__content">
-                <h3>
-                    Immersive experiences that deliver
-                </h3>
-            </div>
+      <div class="content">
+        <div class="nav__logo"></div>
+        <input
+          id="dropdown"
+          class="input-box"
+          type="checkbox"
+          style="display: none"
+        />
+        <label for="dropdown" class="dropdown">
+          <span class="hamburger">
+            <span class="icon-bar top-bar"></span>
+            <span class="icon-bar middle-bar"></span>
+            <span class="icon-bar bottom-bar"></span>
+          </span>
+        </label>
+        <div class="nav__menu_collapse">
+          <ul class="nav__menu_collapse__items">
+            <li><a href="#" class="nav_links"> About</a></li>
+            <li><a href="#" class="nav_links"> Careers</a></li>
+            <li><a href="#" class="nav_links"> Events</a></li>
+            <li><a href="#" class="nav_links"> Products</a></li>
+            <li><a href="#" class="nav_links"> Support</a></li>
+          </ul>
         </div>
+        <div class="nav__menu__content">
+          <h3>Immersive experiences that deliver</h3>
+        </div>
+      </div>
     </header>
     <section class="content image-module__container">
-
-        <img class="image-module__image" src="./images/desktop/image-interactive.jpg" alt="image-interactive">
-        <div class="image-module__content">
-            <h3>The leader in interactive VR</h3>
-            <p>Founded in 2011, Loopstudios has been producing world-class virtual reality projects for some of the best
-                companies around the globe. Our award-winning creations have transformed businesses through digital
-                experiences that bind to their brand.</p>
-        </div>
+      <img
+        class="image-module__image"
+        src="./images/desktop/image-interactive.jpg"
+        alt="image-interactive"
+      />
+      <div class="image-module__content">
+        <h3>The leader in interactive VR</h3>
+        <p>
+          Founded in 2011, Loopstudios has been producing world-class virtual
+          reality projects for some of the best companies around the globe. Our
+          award-winning creations have transformed businesses through digital
+          experiences that bind to their brand.
+        </p>
+      </div>
     </section>
-    <script src="./index.js"></script>
-</body>
+    <section class="content creation__container">
+      <h3>Our Creations</h3>
+      <button href class="creation_cta">See All</button>
 
+      <div class="creation__images-container">
+        <div class="image_container">
+          <picture>
+            <source
+              srcset="./images/desktop/image-deep-earth.jpg"
+              media="(min-width: 768px)"
+            />
+
+            <img src="./images/mobile/image-deep-earth.jpg" alt="Deep Eart" />
+          </picture>
+          <span class="image_desc">Deep Earth</span>
+        </div>
+        <div class="image_container">
+          <picture>
+            <source
+              srcset="./images/desktop/image-night-arcade.jpg"
+              media="(min-width: 768px)"
+            />
+
+            <img src="./images/mobile/image-night-arcade.jpg" alt="Deep Eart" />
+          </picture>
+          <span class="image_desc">Night Arcade</span>
+        </div>
+        <div class="image_container">
+          <picture>
+            <source
+              srcset="./images/desktop/image-soccer-team.jpg"
+              media="(min-width: 768px)"
+            />
+
+            <img src="./images/mobile/image-soccer-team.jpg" alt="Deep Eart" />
+          </picture>
+          <span class="image_desc">Soccer Team VR</span>
+        </div>
+        <div class="image_container">
+          <picture>
+            <source
+              srcset="./images/desktop/image-grid.jpg"
+              media="(min-width: 768px)"
+            />
+
+            <img src="./images/mobile/image-grid.jpg" alt="Deep Eart" />
+          </picture>
+          <span class="image_desc">The Grid</span>
+        </div>
+        <div class="image_container">
+          <picture>
+            <source
+              srcset="./images/desktop/image-from-above.jpg"
+              media="(min-width: 768px)"
+            />
+
+            <img src="./images/mobile/image-from-above.jpg" alt="Deep Eart" />
+          </picture>
+          <span class="image_desc">From up above vr</span>
+        </div>
+        <div class="image_container">
+          <picture>
+            <source
+              srcset="./images/desktop/image-pocket-borealis.jpg"
+              media="(min-width: 768px)"
+            />
+
+            <img
+              src="./images/mobile/image-pocket-borealis.jpg"
+              alt="Deep Eart"
+            />
+          </picture>
+          <span class="image_desc">Pocket borealis</span>
+        </div>
+        <div class="image_container">
+          <picture>
+            <source
+              srcset="./images/desktop/image-curiosity.jpg"
+              media="(min-width: 768px)"
+            />
+
+            <img src="./images/mobile/image-curiosity.jpg" alt="Deep Eart" />
+          </picture>
+          <span class="image_desc">The curiosity</span>
+        </div>
+
+        <div class="image_container">
+          <picture>
+            <source
+              srcset="./images/desktop/image-fisheye.jpg"
+              media="(min-width: 768px)"
+            />
+
+            <img src="./images/mobile/image-fisheye.jpg" alt="Deep Eart" />
+          </picture>
+          <span class="image_desc">Make it fisheye</span>
+        </div>
+      </div>
+    </section>
+    <footer>
+      <div class="content footer_container">
+        <div class="footer_logo"></div>
+
+        <ul class="footer_list">
+          <li><a href="#" class="nav_links"> About</a></li>
+          <li><a href="#" class="nav_links"> Careers</a></li>
+          <li><a href="#" class="nav_links"> Events</a></li>
+          <li><a href="#" class="nav_links"> Products</a></li>
+          <li><a href="#" class="nav_links"> Support</a></li>
+        </ul>
+
+        <div class="footer_social--container">
+          <div class="footer_social">
+            <a href="#" class="footer_social-links">
+              <img src="./images/icon-facebook.svg" alt="facebook" />
+            </a>
+            <a href="#" class="footer_social-links">
+              <img src="./images/icon-twitter.svg" alt="twitter" />
+            </a>
+            <a href="#" class="footer_social-links">
+              <img src="./images/icon-pinterest.svg" alt="pinterest" />
+            </a>
+            <a href="#" class="footer_social-links">
+              <img src="./images/icon-instagram.svg" alt="instagram" />
+            </a>
+          </div>
+          <div class="footer_legend">
+            © 2021 Loopstudios. All rights reserved.
+          </div>
+        </div>
+      </div>
+    </footer>
+    <script src="./index.js"></script>
+  </body>
 </html>
